5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1635_2443.log
== TEST (2019-04-12 14:20:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3r-x))/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 9
    V2=(pi*x**2*(3r-x))/3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:20:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 9
    V2=(pi*x**2*(3r-x)/3
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:20:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.168661
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:20:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:21:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.148441
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:21:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:21:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.127351
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:21:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:22:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w=="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w=="1"):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:23:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.196932
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:23:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:23:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2?")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:25:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2?")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.247223
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:27:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2?")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:29:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=input("1 ou 2?")
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w ==1):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w ==1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:39:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w =="1"):
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.181156
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w =="1"):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:43:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.139911
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:43:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*r**3)/3
V2=(pi*x**2*(3*r-x)/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:51:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*(r**3)/3)
V2=(pi*x**2*(3*r-x)/3)
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.211563
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:52:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=4*pi*(r**3)/3
V2=pi*x**2*(3*r-x)/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.183844
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:54:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*x**2*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.12598
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:56:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.182088
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:56:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.211846
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:56:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:58:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

r=float(input("raio:"))
x=float(input("altura:"))
from math import*
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.158596
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 11
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:58:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

r=float(input("raio:"))
x=float(input("altura:"))
from math import*
w=int(input("1 ou 2?"))
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 11
    if(w ==1:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:59:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.157925
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:59:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- ERROR:
File "XXXX", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:00:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1:)
	print(round(V2,4))
else:
	print(round(V-V2,4))
-- EXECUTION TIME:
0.197406
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 10
    if(w ==1:)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:06:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
r=float(input("raio:"))
x=float(input("altura:"))
w=int(input("1 ou 2?"))
from math import*
V=(4*pi*(r**3))/3
V2=(pi*(x**2)*(3*r-x))/3
if(w ==1):
	print(round(V2,4))
else:
	print(round(V-V2,4))
	
-- EXECUTION TIME:
0.167337
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
